:bug: Fix minimap squeezed/stretched after resize

--- a/stylesheets/minimap.less
+++ b/stylesheets/minimap.less
@@ -140,6 +140,7 @@
 
   .minimap-canvas {
     width: 100%;
+    height: auto;
   }
 
   // Mixins
